Fix footer overlaping content
Updated padding size

--- a/http/css/style.less
+++ b/http/css/style.less
@@ -7,7 +7,7 @@
 
 /* Footer fix by Lurux 7 jul 2019 */
 .pageContent {
-    padding-bottom: 80px;
+    padding-bottom: 100px;
 }
 
 .visprintimp {
